implementing user feedback

--- a/src/contexts/localization/languages/Jet_UI_EN.json
+++ b/src/contexts/localization/languages/Jet_UI_EN.json
@@ -80,7 +80,7 @@
     "wallet": "Wallet",
     "connect": "Connect",
     "worldOfDefi": "Connect your wallet to the world of DeFi.",
-    "theme": "Dark Theme",
+    "theme": "Theme",
     "light": "Light",
     "dark": "Dark",
     "language": "Language",
