mobile styling fixes

--- a/src/contexts/localization/languages/Jet_UI_DE.json
+++ b/src/contexts/localization/languages/Jet_UI_DE.json
@@ -6,7 +6,8 @@
     "initializing": "Starte Düsentriebwerk",
     "fetchingReserves": "Lade Reserve-Daten",
     "fetchingAccount": "Lade Account-Daten",
-    "loading": "Loading"
+    "loading": "Loading",
+    "loadMore": "Load More"
   },
   "nav": {
     "cockpit": "Cockpit",
