--- a/src/contexts/localization/languages/Jet_UI_RU.json
+++ b/src/contexts/localization/languages/Jet_UI_RU.json
@@ -55,7 +55,7 @@
     "oweLess": "Вы должны меньше.",
     "geobanned": "Jet протокол не доступен в вашем регионе.",
     "noMarket": "площадка Jet не смогла запуститься.",
-    "txSuccess": "Успех! Ваш(а) {{TRADE ACTION}} на {{AMOUNT AND ASSET}} получен(а). Проверить транзакцию в <a href='{{EXPLORER LINK}}' class='text-gradient' target='_blank' style='margin: unset; font-weight: bold;'>обозревателе</a>.",
+    "txSuccess": "Успех! Ваш(а) {{TRADE ACTION}} на {{AMOUNT AND ASSET}} получен(а). Проверить транзакцию в <a href='{{EXPLORER LINK}}' class='text-gradient' target='_blank' style='font-weight: bold;'>обозревателе</a>.",
     "txFailed": "Транзакция не прошла. Мы не уверены, что пошло не так. Попробуйте еще раз позже или свяжитесь с нами.",
     "max": "Максимум",
     "assetIsCurrentBorrow": "Вы одолжили {{ASSET}}, поэтому не можете его внести на депозит",
