--- a/src/contexts/localization/languages/Jet_UI_IT.json
+++ b/src/contexts/localization/languages/Jet_UI_IT.json
@@ -175,8 +175,8 @@
     "noMoreLogs": "No more logs to search"
   },
   "termsPrivacy": {
-    "termsOfUse": "Condizioni d'uso",
-    "privacyPolicy": "Politica Sulla Risevatezza"
+    "privacyPolicy": "Politica Sulla Risevatezza",
+    "termsOfService": "Terms of Service"
   },
   "healthbar": {
     "critical": "Critico",
