--- a/src/contexts/localization/languages/Jet_UI_SP.json
+++ b/src/contexts/localization/languages/Jet_UI_SP.json
@@ -175,8 +175,8 @@
     "noMoreLogs": "No se encuentran más registros"
   },
   "termsPrivacy": {
-    "termsOfUse": "Terminos de Uso",
-    "privacyPolicy": "Politica de Privacidad"
+    "privacyPolicy": "Politica de Privacidad",
+    "termsOfService": "Terms of Service"
   },
   "healthbar": {
     "critical": "Crítico",
