--- a/src/contexts/localization/languages/Jet_UI_KR.json
+++ b/src/contexts/localization/languages/Jet_UI_KR.json
@@ -176,7 +176,8 @@
   },
   "termsPrivacy": {
     "privacyPolicy": "Privacy Policy",
-    "termsOfService": "Terms of Service"
+    "termsOfService": "Terms of Service",
+    "glossary": "Glossary"
   },
   "healthbar": {
     "critical": "Critical",
