JV15-151 add time to flight logs

--- a/src/contexts/localization/languages/Jet_UI_DE.json
+++ b/src/contexts/localization/languages/Jet_UI_DE.json
@@ -163,6 +163,7 @@
   "transactions": {
     "title": "Flugbuch",
     "date": "Datum",
+    "time": "Time",
     "signature": "Signatur",
     "tradeAction": "Transaktion",
     "tradeAmount": "Betrag",
