--- a/src/contexts/localization/languages/Jet_UI_IT.json
+++ b/src/contexts/localization/languages/Jet_UI_IT.json
@@ -163,6 +163,7 @@
   "transactions": {
     "title": "Diario di bordo",
     "date": "Data",
+    "time": "Time",
     "signature": "Firma",
     "tradeAction": "Transazione",
     "tradeAmount": "Quantità",
