--- a/src/contexts/localization/languages/Jet_UI_KR.json
+++ b/src/contexts/localization/languages/Jet_UI_KR.json
@@ -163,6 +163,7 @@
   "transactions": {
     "title": "비행 기록",
     "date": "날짜",
+    "time": "Time",
     "signature": "서명",
     "tradeAction": "거래",
     "tradeAmount": "비용",
