--- a/src/contexts/localization/languages/Jet_UI_SP.json
+++ b/src/contexts/localization/languages/Jet_UI_SP.json
@@ -163,6 +163,7 @@
   "transactions": {
     "title": "Registro de Vuelo",
     "date": "Fecha",
+    "time": "Time",
     "signature": "Firma",
     "tradeAction": "Transacción",
     "tradeAmount": "Monto",
