--- a/src/contexts/localization/languages/Jet_UI_TR.json
+++ b/src/contexts/localization/languages/Jet_UI_TR.json
@@ -162,6 +162,7 @@
   "transactions": {
     "title": "Uçuş Kayırları",
     "date": "Tarih",
+    "time": "Time",
     "signature": "İmza",
     "tradeAction": "İşlem",
     "tradeAmount": "Miktar",
